fixed CURD
