# swagger_output.json
@@ -1609,21 +1609,15 @@
         "description": "公告清單查詢",
         "parameters": [
           {
-            "name": "keyWord",
+            "name": "timeSort",
             "in": "query",
-            "description": "關鍵字fuzzy[tittle,content], 預設空直為搜尋全部",
             "schema": {
               "type": "string"
             }
           },
           {
-            "name": "timeSort",
+            "name": "page",
             "in": "query",
-            "description": "排序遠到近,進到遠default = desc",
-            "enum": [
-              "asc",
-              "desc"
-            ],
             "schema": {
               "type": "string"
             }
@@ -1631,17 +1625,16 @@
           {
             "name": "limit",
             "in": "query",
-            "description": "清單顯示比數,default=10",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           },
           {
-            "name": "page",
+            "name": "keyWord",
             "in": "query",
-            "description": "顯示第幾頁資料default=1",
+            "description": "關鍵字fuzzy[tittle,content], 預設空直為搜尋全部",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -1677,7 +1670,7 @@
                   },
                   "title": {
                     "type": "string",
-                    "example": ""
+                    "example": "test"
                   },
                   "content": {
                     "type": "string",
@@ -1731,7 +1724,7 @@
                 "properties": {
                   "title": {
                     "type": "string",
-                    "example": ""
+                    "example": "標題123"
                   },
                   "content": {
                     "type": "string",
@@ -1739,7 +1732,7 @@
                   },
                   "isTop": {
                     "type": "Boolean",
-                    "default": true
+                    "default": false
                   },
                   "isEnabled": {
                     "type": "Boolean",
